fix: overlay rendering issue on safari

--- a/app/styles/pricing/core-features-toggle.module.css
+++ b/app/styles/pricing/core-features-toggle.module.css
@@ -25,59 +25,12 @@
     margin-top: 84px;
 }
 
-.toggler__item__wrapper__small {
-    width: 230px !important;
-}
-
-.toggler__item__wrapper {
-    position: absolute;
-    padding: 3px;
-
-    width: 355px;
-    height: calc(100% - 6px);
-    top: 3px;
-}
-
-.toggler__item__wrapper__small::before {
-    width: calc(100% + 12px) !important;
-}
-
-.toggler__item__wrapper::before {
-    content: "";
-    position: absolute;
-
-    border-radius: 12px;
-    z-index: 1;
-    background: rgba(255, 153, 51, 0.5);
-    filter: blur(50px);
-    width: calc(355px + 12px);
-    height: calc(100% + 12px);
-
-    top: -5px;
-    left: 3px;
-}
-
-.toggler__item__wrapper__small::after {
-    width: 230px !important;
-}
-
-.toggler__item__wrapper::after {
-    content: "";
-    position: absolute;
-
+.toggler__item__active{
     border: 1px solid #f93;
-    border-radius: 12px;
+    border-radius: 12px !important;
+    height: 100%;
 
-    z-index: 5;
-
-    top: 0px;
-    left: 3px;
-    width: 355px;
-    height: calc(100% - 2px);
-}
-
-.toggle__item__container__small {
-    width: 230px !important;
+    position: relative;
 }
 
 .toggle__item__container {
@@ -93,6 +46,7 @@
     flex-shrink: 0;
 
     z-index: 3;
+    margin: 2px;
 }
 
 .left__corners__14 {
@@ -179,7 +133,7 @@
     background: #000;
 
     display: flex;
-    gap: 32px;
+    gap: 10px;
     justify-content: center;
     align-items: center;
 
@@ -224,14 +178,6 @@
         max-width: 298px;
     }
 
-    .toggler__item__wrapper::before {
-        width: calc(100% + 12px);
-    }
-
-    .toggler__item__wrapper::after {
-        width: 100%;
-    }
-
     .toggle__item__container {
         width: 298px;
     }
@@ -241,7 +187,7 @@
     }
 
     .toggler__item__dark {
-        gap: 24px;
+        gap: 10px;
     }
 
     .toggler__item__gray {
