--- a/app/styles/pricing/paid-features-toggle.module.css
+++ b/app/styles/pricing/paid-features-toggle.module.css
@@ -14,45 +14,10 @@
     cursor: pointer;
 }
 
-.toggler__item__wrapper {
-    position: absolute;
-    padding: 3px;
-    width: 230px;
-
-    height: calc(100% - 6px);
-    top: 3px;
-}
-
-.toggler__item__wrapper::before {
-    width: 100%;
-
-    content: "";
-    position: absolute;
-
-    border-radius: 12px;
-    z-index: 1;
-    background: rgba(255, 153, 51, 0.5);
-    filter: blur(50px);
-    width: calc(100% + 12px);
-    height: calc(100% + 12px);
-
-    top: -5px;
-    left: 3px;
-}
-
-.toggler__item__wrapper::after {
-    width: calc(100% + 2px);
-
-    content: "";
-    position: absolute;
-
+.toggler__item__active {
     border: 1px solid #f93;
     border-radius: 6px;
 
-    z-index: 5;
-
-    top: -1px;
-    left: 2px;
     height: 100%;
 }
 
@@ -71,8 +36,6 @@
     flex-shrink: 0;
 
     gap: 10px;
-
-    z-index: 3;
 
     padding: 16px 0px;
 }
